Fix a small right alignment bug in portrait.

--- a/packages/bpk-component-graphic-promotion/src/BpkGraphicPromo.module.scss
+++ b/packages/bpk-component-graphic-promotion/src/BpkGraphicPromo.module.scss
@@ -209,8 +209,8 @@
     }
 
     &--end {
-      align-items: start;
-      text-align: start;
+      align-items: end;
+      text-align: end;
     }
   }
 
